Update background image in cover section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
 /* ===== COVER ===== */
 .cover {
   height: 100vh;
-  background: url("Pink 3d roses.jpeg") center/cover no-repeat;
+  background: url("mawarr jpg") center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
