Fix image filename and update footer text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
 /* ===== COVER ===== */
 .cover {
   height: 100vh;
-  background: url("mawarr jpg") center/cover no-repeat;
+  background: url("mawarr.jpg") center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -207,7 +207,7 @@ footer {
 
 <!-- ===== FOOTER ===== -->
 <footer>
-  Sania Dewi 11-12
+  Salma nafisah rosmiati XI-12
 </footer>
 
 </body>
